--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "filipows",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chance": "^0.8.0",
+    "cheerio": "^0.19.0",
+    "request": "^2.67.0",
+    "winston": "^2.1.1"
+  }
 }
