--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "filipows",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.5.0",
     "chance": "^0.8.0",
     "cheerio": "^0.19.0",
+    "lodash": "^3.10.1",
     "request": "^2.67.0",
     "winston": "^2.1.1"
   }
