--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "chance": "^0.8.0",
     "cheerio": "^0.19.0",
     "lodash": "^3.10.1",
+    "node-horseman": "^2.8.2",
+    "q": "^1.4.1",
     "request": "^2.67.0",
     "winston": "^2.1.1"
   }
