--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "cheerio": "^0.19.0",
     "lodash": "^3.10.1",
     "node-horseman": "^2.8.2",
-    "q": "^1.4.1",
-    "request": "^2.67.0",
+    "request-promise": "^1.0.2",
     "winston": "^2.1.1"
   }
 }
